# KKBD-USB

./: .gitignore  CMakeLists.txt  README.md  pico_sdk_import.cmake
docs/design/: テスト戦略.md  実装計画.md  将来計画_5V_SBC接続_電圧レベル変換.md  将来計画_応答モニタ_PlanA.md  将来計画_応答モニタ_PlanB.md  将来計画_応答モニタ_概要.md  設計書.md
docs/images/: architecture.drawio  system_overview.drawio  wiring_diagram.drawio
docs/images/tool/: convert_drawio.sh
docs/manual/: 01_ハードウェア構成.md  02_組み立て手順.md  03_ビルドと書き込み.md  04_使い方.md  05_OTGと電源.md  06_キーボード対応状況.md  07_トラブルシューティング.md
docs/requirements/: 要件定義.md  要件概要.md
docs/tests/: phase1_実機検証手順.md  phase2_実機検証手順.md  phase3_実機検証手順.md  phase4_実機検証手順.md  phase5_実機検証手順.md  phase6_実機検証手順.md  phase9_実機検証手順.md
scripts/: build.sh
src/: CMakeLists.txt  config.c  config.h  keymap.c  keymap.h  keyrepeat.c  keyrepeat.h  led.c  led.h  main.c  tusb_config.h  uart_monitor.c  uart_monitor.h  uart_out.c  uart_out.h  usb_host.c  usb_host.h
tests/: CMakeLists.txt  test_config.c  test_framework.h  test_keymap.c  test_keyrepeat.c
